split package into two modules so that it is easier to use for non react code

--- a/Envisia.React.Extensions/Envisia.React.Extensions.csproj
+++ b/Envisia.React.Extensions/Envisia.React.Extensions.csproj
@@ -14,4 +14,8 @@
       <PackageReference Include="React.AspNet" Version="5.2.11" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Envisia.Webpack.Extensions\Envisia.Webpack.Extensions.csproj" />
+    </ItemGroup>
+
 </Project>
