--- a/Envisia.Webpack.Extensions/Envisia.Webpack.Extensions.csproj
+++ b/Envisia.Webpack.Extensions/Envisia.Webpack.Extensions.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
       <FrameworkReference Include="Microsoft.AspNetCore.App" Version="5.0.4" />
       <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.4" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     </ItemGroup>
 
 </Project>
