--- a/Envisia.React.Extensions/Envisia.React.Extensions.csproj
+++ b/Envisia.React.Extensions/Envisia.React.Extensions.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
       <FrameworkReference Include="Microsoft.AspNetCore.App" Version="5.0.4" />
       <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="6.0.5" />
+      <PackageReference Include="OpenTelemetry.Api" Version="1.3.1" />
       <PackageReference Include="React.AspNet" Version="5.2.12" />
     </ItemGroup>
 
