--- a/Envisia.React.Extensions/Envisia.React.Extensions.csproj
+++ b/Envisia.React.Extensions/Envisia.React.Extensions.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
         <PackageProjectUrl>https://github.com/envisia/React.Extensions</PackageProjectUrl>
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
         <RepositoryUrl>https://github.com/envisia/React.Extensions</RepositoryUrl>
@@ -9,9 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <FrameworkReference Include="Microsoft.AspNetCore.App" Version="5.0.4" />
-      <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="6.0.5" />
-      <PackageReference Include="OpenTelemetry.Api" Version="1.3.1" />
+      <FrameworkReference Include="Microsoft.AspNetCore.App" />
+      <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="7.0.10" />
+      <PackageReference Include="OpenTelemetry.Api" Version="1.5.1" />
       <PackageReference Include="React.AspNet" Version="5.2.12" />
     </ItemGroup>
 
