--- a/Envisia.React.Extensions/Envisia.React.Extensions.csproj
+++ b/Envisia.React.Extensions/Envisia.React.Extensions.csproj
@@ -9,7 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <FrameworkReference Include="Microsoft.AspNetCore.App" Version="5.0.4" />
+        <FrameworkReference Include="Microsoft.AspNetCore.App" />
       <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="8.0.2" />
       <PackageReference Include="OpenTelemetry.Api" Version="1.7.0" />
       <PackageReference Include="React.AspNet" Version="5.2.12" />
