--- a/Envisia.Webpack.Extensions/Envisia.Webpack.Extensions.csproj
+++ b/Envisia.Webpack.Extensions/Envisia.Webpack.Extensions.csproj
@@ -9,7 +9,7 @@
     </PropertyGroup>
     
     <ItemGroup>
-      <FrameworkReference Include="Microsoft.AspNetCore.App" Version="5.0.4" />
+      <FrameworkReference Include="Microsoft.AspNetCore.App" />
       <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="8.0.2" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
     </ItemGroup>
