--- a/Envisia.Webpack.Extensions/Envisia.Webpack.Extensions.csproj
+++ b/Envisia.Webpack.Extensions/Envisia.Webpack.Extensions.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
         <PackageProjectUrl>https://github.com/envisia/React.Extensions</PackageProjectUrl>
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
         <RepositoryUrl>https://github.com/envisia/React.Extensions</RepositoryUrl>
@@ -9,7 +8,7 @@
     </PropertyGroup>
     
     <ItemGroup>
-      <FrameworkReference Include="Microsoft.AspNetCore.App" Version="5.0.4" />
+      <FrameworkReference Include="Microsoft.AspNetCore.App" />
       <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="8.0.2" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
     </ItemGroup>
